--- a/.github/workflows/ia2.yml
+++ b/.github/workflows/ia2.yml
@@ -1,12 +1,8 @@
 name: Baixando Lista
-# Baixando Lista
-
-# Descrição: Este script automatiza o processo de atualização da lista baixada.
-# O script é disparado por meio de uma agendamento (cron) ou pela ação de pull request.
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Executa a cada 12 horas
+    - cron: '*/30 * * * *'  # Schedule to run every 30 minutes
   pull_request:
     branches:
       - main
@@ -18,46 +14,45 @@ jobs:
 
     steps:
     - name: Checkout Repositório
-      uses: actions/checkout@v3  # Updated to use a newer version
+      uses: actions/checkout@v4  # Updated to use a newer version
 
-    - name: Configurar Ambiente Virtual
-      run: |
-        python3 -m venv venv
-        source venv/bin/activate
-        pip install --upgrade pip  # Upgrade pip within the virtual environment
-
-    - name: Instalando Dependências Python
-      run: |
-        source venv/bin/activate
-        pip install streamlink selenium requests beautifulsoup4 lxml python-dateutil yt-dlp youtube-dl pytz
-
-    - name: Install ffmpeg
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg      
-
-    - name: Executar script Python
-      run: |
-        source venv/bin/activate
-        python ia2.py
-        if [ $? -ne 0 ]; then
-          echo "Erro na execução do script Python."
-          exit 1
-        fi
-    - name: Adicionar arquivos ao controle de versão
-      run: |
-        git add -A
-        ls -la
-        
-
-        
-
-         
-         
-         
-    - name: Commit & Push
+    - name: Configurar Git
       run: |
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
-        git commit -m "Atualizar lista baixada"
-        git push origin main
+
+    - name: Deletar Log
+      run: |
+        rm -rf ./log.txt
+
+    - name: Instalando dependências
+      run: |
+        # Install required Python dependencies
+        python3 -m pip install --upgrade pip
+        python3 -m pip install streamlink selenium requests beautifulsoup4 lxml python-dateutil yt-dlp youtube-dl pytz
+
+        
+    - name: Verificar versão do Python
+      run: |
+        python3 --version
+
+
+    - name: Rodar script YT.py
+      run: |
+        # Navega até a pasta scripts e executa o script YT.py
+        cd scripts
+        python3 ia2.py
+
+    - name: Adicionar Mudanças ao Controle de Versão
+      run: |
+        git add -A
+        git status
+
+    - name: Garantir alterações mais recentes do repositório remoto
+      run: |
+        git pull origin main || echo "Erro ao fazer pull, pode ser que já tenha as últimas alterações."
+
+    - name: Commit e Push
+      run: |
+        git commit -m "Atualizar lista baixada" || echo "Nenhuma mudança para commitar."
+        git push origin main || echo "Erro ao fazer push. Pode ser necessário revisar conflitos."
