--- a/.github/workflows/listdown.yml
+++ b/.github/workflows/listdown.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         source venv/bin/activate
         pip install streamlink selenium requests beautifulsoup4 lxml python-dateutil yt-dlp youtube-dl pytz
+        python3 -m pip install requests streamlink beautifulsoup4 selenium yt_dlp
 
     - name: Install ffmpeg
       run: |
